--- a/package.json
+++ b/package.json
@@ -1,19 +1,56 @@
 {
-  "name": "khelg2015-3-rodret",
+  "name": "express-lab",
   "version": "0.1.0",
-  "description": "Prototype for KHelg 2015:3, room \"Rodret\".",
-  "main": "index.js",
+  "description": "A lab for learning how to create a JSON API with Express.",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "debug": "node --debug-brk server.js",
+    "test": "mocha --recursive",
+    "test-debug": "mocha --recursive --debug-brk",
+    "test-watch": "mocha --recursive --watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jayway/khelg2015-3-rodret.git"
+    "url": "https://github.com/andersjanmyr/express-lab.git"
   },
-  "author": "",
+  "keywords": [
+    "Lab",
+    "Express"
+  ],
+  "author": "Anders Janmyr <anders@janmyr.com> (http://anders.janmyr.com/)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jayway/khelg2015-3-rodret/issues"
+    "url": "https://github.com/andersjanmyr/express-lab/issues"
   },
-  "homepage": "https://github.com/jayway/khelg2015-3-rodret#readme"
+  "homepage": "https://github.com/andersjanmyr/express-lab",
+  "jshintConfig": {
+    "curly": false,
+    "indent": 4,
+    "trailing": true,
+    "maxparams": 4,
+    "maxdepth": 2,
+    "maxcomplexity": 6,
+    "node": true,
+    "globals": {
+      "describe": true,
+      "before": true,
+      "it": true
+    }
+  },
+  "dependencies": {
+    "body-parser": "^1.9.0",
+    "debug": "^1.0.4",
+    "express": "^4.8.5",
+    "morgan": "^1.3.2",
+    "socket.io": "^1.1.0"
+  },
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "mocha": "^1.21.4",
+    "nodemon": "^1.2.1",
+    "sinon": "^1.10.3",
+    "supertest": "^0.13.0"
+  }
 }
