--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "body-parser": "^1.9.0",
     "debug": "^1.0.4",
+    "ejs": "^2.3.4",
     "express": "^4.8.5",
     "morgan": "^1.3.2",
     "socket.io": "^1.1.0"
