Add template for index

--- a/package.json
+++ b/package.json
@@ -48,10 +48,6 @@
     "socket.io": "^1.1.0"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
-    "mocha": "^1.21.4",
-    "nodemon": "^1.2.1",
-    "sinon": "^1.10.3",
-    "supertest": "^0.13.0"
+    "nodemon": "^1.2.1"
   }
 }
