--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "body-parser": "^1.9.0",
     "debug": "^1.0.4",
     "express": "^4.8.5",
-    "morgan": "^1.3.2",
-    "socket.io": "^1.1.0"
+    "mongoskin": "^1.4.4",
+    "morgan": "^1.6.1"
   },
   "devDependencies": {
     "chai": "^1.9.1",
