--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "ejs": "^2.3.4",
     "express": "^4.8.5",
     "mongoskin": "^1.4.4",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "nodemon": "^1.2.1"
