--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.8.5",
     "mongoskin": "^1.4.4",
     "morgan": "^1.6.1",
+    "multer": "^1.0.5",
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
