--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mongoskin": "^1.4.4",
     "morgan": "^1.6.1",
     "multer": "^1.0.5",
+    "multer-s3": "^1.3.0",
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
